--- a/style.css
+++ b/style.css
@@ -116,7 +116,8 @@ ul {
 }
 .hack li a {
   display: inline-block;
-  width: 360px;
+  vertical-align: top;
+  width: 380px;
 }
 .hack small {
   display: inline-block;
