--- a/what.tmpl
+++ b/what.tmpl
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
-<link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
-<link href="style.css" rel="stylesheet" type="text/css">
+{% extends "layout.tmpl" %}
 
+{% block title %}
 <title>What is Roborampage?</title>
+{% endblock %}
 
+{% block styles %}
 <style>
   p, ul, ol { text-align: left; }
   ul, ol { 
@@ -17,9 +17,9 @@
     text-align: center;
   }
 </style>
+{% endblock %}
 
-<a href="https://github.com/stenington/roborampage"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/567c3a48d796e2fc06ea80409cc9dd82bf714434/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png"></a>
-
+{% block content %}
 <hgroup>
   What is 
   <h1>ROBORAMPAGE</h1>
@@ -87,4 +87,4 @@
   <a href="https://github.com/stenington/roborampage/issues">issue tracker</a>. Questions or feedback can also be directed at
   <a href="https://twitter.com/stenington">@stenington</a> on Twitter. Thanks for your interest and happy hacking!
 </p>
-
+{% endblock %}
