Add src and src/vendor

--- a/index.tmpl
+++ b/index.tmpl
@@ -1,8 +1,8 @@
 {% extends "layout.tmpl" %}
 
 {% block scripts %}
-<script src="{{rootPath}}coquette.js"></script>
-<script src="{{rootPath}}roborampage.js"></script>
+<script src="{{rootPath}}src/vendor/coquette.js"></script>
+<script src="{{rootPath}}src/roborampage.js"></script>
 {% endblock %}
 
 {% block content %}
