Extract config, add in thimble-focus, export copy/pastable version, update line numbers

--- a/hacks/colors/skeleton.tmpl
+++ b/hacks/colors/skeleton.tmpl
@@ -1,5 +1,11 @@
 {% extends "index.tmpl" %}
+{% if not rootPath %}
 {% set rootPath = "../../" %}
+{% endif %}
+
+{% block scripts %}
+{{ super() }}<script src="{{rootPath}}src/thimble-focus.js"></script>
+{% endblock %}
 
 {% block main %}
 <script>
