Fix up graphics tutorial, compile tutorial files for line calculation

--- a/index.tmpl
+++ b/index.tmpl
@@ -37,6 +37,7 @@
     <li><a href="#">Change the robot AI</a> <small>Coming soon</small></li>
   </ul>
 </section>
+{% block last %}{% endblock %}
 <section class="attribution">
   <small><a href="http://coquette.maryrosecook.com/">Coquette framework</a> by Mary Rose Cook</small>
   <small>ROBORAMPAGE by <a href="https://twitter.com/stenington">@stenington</a></small>
