Set rootPath explicitly in index and what templates

--- a/index.tmpl
+++ b/index.tmpl
@@ -1,4 +1,7 @@
 {% extends "layout.tmpl" %}
+{% if not rootPath %}
+  {% set rootPath = "" %}
+{% endif %}
 
 {% block scripts %}
 <script src="{{rootPath}}src/vendor/coquette.js"></script>
