--- a/hacks/graphics/copypaste.tmpl
+++ b/hacks/graphics/copypaste.tmpl
@@ -1,3 +1,3 @@
-{% extends "hacks/colors/skeleton.tmpl" %}
+{% extends "hacks/graphics/skeleton.tmpl" %}
 {% set rootPath = "//stenington.github.io/roborampage/" %}
 
