Relativize graphics tutorial graphics

--- a/hacks/graphics/skeleton.tmpl
+++ b/hacks/graphics/skeleton.tmpl
@@ -15,10 +15,10 @@
     specifically <a href="http://opengameart.org/content/block-ninja-2d-sprites">this</a> and
     <a href="http://opengameart.org/content/little-angry-robot-drone">this</a> resource.
   </p>
-  <img id="player-alive" src="ninja.png">
-  <img id="player-dead" src="dead.png">
-  <img id="robot-alive" src="bot-g.gif">
-  <img id="robot-dead" src="bot-r.gif">
+  <img id="player-alive" src="{{rootPath}}hacks/graphics/ninja.png">
+  <img id="player-dead" src="{{rootPath}}hacks/graphics/dead.png">
+  <img id="robot-alive" src="{{rootPath}}hacks/graphics/bot-g.gif">
+  <img id="robot-dead" src="{{rootPath}}hacks/graphics/bot-r.gif">
 </section>
 {% endblock %}
 
