Include thimble-focus everywhere

--- a/index.tmpl
+++ b/index.tmpl
@@ -6,6 +6,7 @@
 {% block scripts %}
 <script src="{{rootPath}}src/vendor/coquette.js"></script>
 <script src="{{rootPath}}src/roborampage.js"></script>
+<script src="{{rootPath}}src/thimble-focus.js"></script>
 {% endblock %}
 
 {% block content %}
